--- a/html/main.html
+++ b/html/main.html
@@ -155,6 +155,6 @@
             <!-- IONICONS -->
             <script src="https://unpkg.com/ionicons@5.2.3/dist/ionicons.js"></script>
             <!-- JS -->
-            <script src="js/main.js"></script>
+            <script src="/js/main.js"></script>
 </body>
 </html>
