--- a/html/manage-login.html
+++ b/html/manage-login.html
@@ -52,7 +52,7 @@
                                                 id="exampleInputPassword" placeholder="비밀번호를 입력하세요">
                                         </div>
                                         
-                                        <a href="index.html" class="btn btn-primary btn-user btn-block">
+                                        <a href="manage-index.html" class="btn btn-primary btn-user btn-block">
                                             Login
                                         </a>
                                         
