--- a/html/login.html
+++ b/html/login.html
@@ -85,7 +85,7 @@
                                         <a class="small" href="register.html">회원가입 하기!</a>
                                     </div>
                                     <div class="text-center">
-                                        <a class="small" href="kakao.html">임시 메인화면 접속</a>
+                                        <a class="small" href="https://ohyaeji.github.io/cip.github.io/index.html#">임시 메인화면 접속</a>
                                     </div>
                                 </div>
                             </div>
